# pytest-snappy

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
pytest_snappy/: plugin.py  snap.py  snappy.py  utils.py
