[metadata]
name = pytest-snappy
version = 0.1.0
description = A plugin for snapshot UI testing with pytest and selenium.
long_description = file: README.md
author = Georgy Podgorsky
maintainer = Georgy Podgorsky
license = MIT
url = https://github.com/podgorsky/pytest-snappy
classifiers =
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = pytest_snappy
python_requires = >=3.6
install_requires =
    numpy >= 1.16.5
    opencv-python >= 4.5.4.58
    pytest >= 6.2.1
    selenium == 3.141.0
    pytest-selenium == 2.0.1
    scikit-image >= 0.18.3

[options.entry_points]
pytest11 = snappy = pytest_snappy.plugin
